<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>zw.ac.uz.emhare</groupId>
    <artifactId>emhare</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>eMhare</name>
    <description>New eMhare split-service platform</description>

    <properties>
        <java.version>21</java.version>
        <spring-boot.version>4.1.0</spring-boot.version>
        <spring-cloud.version>2025.1.2</spring-cloud.version>
        <archunit.version>1.4.1</archunit.version>
        <jacoco.version>0.8.15</jacoco.version>
        <maven-enforcer.version>3.6.2</maven-enforcer.version>
        <spotless.version>2.44.0</spotless.version>
        <springdoc.version>3.0.3</springdoc.version>
        <mockito.version>5.23.0</mockito.version>
        <jacocoArgLine></jacocoArgLine>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>${java.version}</maven.compiler.release>
    </properties>

    <modules>
        <module>libraries/service-foundation</module>
        <module>libraries/persistence-audit</module>
        <module>libraries/integration-contracts</module>
        <module>libraries/test-support</module>
        <module>services/discovery-server</module>
        <module>services/api-gateway</module>
        <module>services/core-identity-service</module>
        <module>services/academic-setup-service</module>
        <module>services/admissions-service</module>
        <module>services/finance-service</module>
        <module>services/student-records-service</module>
        <module>services/assessment-results-service</module>
        <module>services/exams-timetabling-service</module>
        <module>services/accommodation-service</module>
        <module>services/dining-service</module>
        <module>services/documents-reporting-service</module>
        <module>services/notifications-service</module>
        <module>services/communications-service</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer.version}</version>
                <executions>
                    <execution>
                        <id>enforce-emhare-service-boundaries</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <bannedDependencies>
                                    <searchTransitive>true</searchTransitive>
                                    <excludes>
                                        <exclude>org.springframework.cloud:spring-cloud-starter-openfeign</exclude>
                                        <exclude>io.github.openfeign:*</exclude>
                                        <exclude>zw.ac.uz.emhare:*-service</exclude>
                                    </excludes>
                                    <message>eMhare services use Spring HTTP Service Clients and may not depend directly on another service artifact.</message>
                                </bannedDependencies>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-unit-test-coverage</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>jacocoArgLine</propertyName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report-unit-test-coverage</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <ratchetFrom>origin/main</ratchetFrom>
                    <java>
                        <googleJavaFormat>
                            <version>1.24.0</version>
                        </googleJavaFormat>
                        <removeUnusedImports />
                        <formatAnnotations />
                        <trimTrailingWhitespace />
                        <endWithNewline />
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>check-java-formatting</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>${java.version}</release>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <id>repackage-executable-service-jar</id>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.flywaydb</groupId>
                    <artifactId>flyway-maven-plugin</artifactId>
                    <configuration>
                        <locations>
                            <location>filesystem:src/main/resources/db/migration</location>
                        </locations>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.5</version>
                    <configuration>
                        <argLine>@{jacocoArgLine} -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
